--- a/src/app/ComponentsStyle/navbar.css
+++ b/src/app/ComponentsStyle/navbar.css
@@ -25,17 +25,104 @@
   position: relative;
   left: 2rem;
   height: 100%;
-  width: 31rem;
+  width: 42rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .searchbar {
-  height: 50%;
+  height: 53%;
   width: 100%;
   border-radius: 18px;
   text-align: center;
   font-weight: 200;
-  font-size: 1rem; 
+  font-size: 1rem;
 }
+
+.searchimage {
+  position: relative;
+  left: -39rem;
+  z-index: 3;
+  height: 2rem;
+  width: 2rem;
+}
+
+.register_holder {
+  display: flex;
+  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 24%;
+  position: relative;
+  left: 20rem;
+}
+
+.login_holder {
+  position: relative;
+}
+
+.login_button {
+  width: 6.5rem;
+  height: 3rem;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 700;
+  background-color: #5e78a3;
+  border: 2px solid #1c2f4b;
+  color: white;
+}
+
+.login_button:hover {
+  background-color: white;
+  color: #1c2f4b;
+}
+
+.signup_holder {
+  position: relative;
+}
+
+.signup_button {
+  width: 6.5rem;
+  height: 3rem;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 700;
+  background-color: #5e78a3;
+  border: 2px solid #1c2f4b;
+  color: white;
+
+}
+
+.signup_button:hover {
+  background-color: white;
+  color: #1c2f4b;
+}
+
+.text_holder {
+  position: relative;
+  left: -19.5rem;
+  display: flex;
+  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 1rem;
+}
+
+.text1{
+    cursor: pointer;
+}
+
+.text1:hover {
+    color: #1c2f4b;
+  }
+
+.text2{
+    cursor: pointer;
+}
+
+.text2:hover {
+    color: #1c2f4b;
+  }
