--- a/src/app/ComponentsStyle/cards.css
+++ b/src/app/ComponentsStyle/cards.css
@@ -1,26 +1,31 @@
 .cardsParent {
-  position: absolute;
+  position: relative;
+  top: -3rem;
   height: auto;
   width: 100vw;
 }
 
 .cardsFirstChild {
-  position: relative;
   display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(447px, 0fr));
   align-items: center;
-  justify-content: center;
-  grid-template-columns: 1fr 1fr 1fr; /* Three columns */
-  width: 100%;
-  height: 100%;
+  margin-left: 1rem;
+  /* grid-gap: 12rem; */
+  gap: 23px;
+}
+
+.cardsHolder {
+  margin-top: 8rem;
+  margin-left: 2.8rem;
 }
 
 .cardsPreview {
-  width: 30rem;
+  width: 28rem;
   height: 16rem;
-  margin-top: 6rem;
 }
 
 .previewImage {
+  border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
   object-fit: cover;
   height: 100%;
   width: 100%;
@@ -30,9 +35,10 @@
   position: absolute;
   display: flex;
   justify-content: left;
-  background-color: rgb(242, 237, 237);
-  width: 30rem;
-  height: 7rem;
+  background-color: white;
+  border-radius: 0 0 1.5rem 1.5rem;
+  width: 28rem;
+  height: 6.5rem;
 }
 
 .cardLogoHolder {
@@ -57,7 +63,16 @@
 .cardsDesc {
   font-size: 1rem;
   font-weight: 600;
-  /* margin-left: 0.5rem; */
+  margin-left: 0.5rem;
   margin-top: 0.5rem;
+  margin-right: 4rem;
+}
+
+.channel {
+  position: relative;
+  top: -0.5rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: gray;
   margin-right: 4rem;
 }
