--- a/src/app/register/page.css
+++ b/src/app/register/page.css
@@ -76,8 +76,8 @@
   align-items: center;
 }
 
-.tabsRegister.active {
-}
+/* .tabsRegister.active {
+} */
 
 .tabLogin.active {
   background-color: skyblue;
